--- a/spring-cloud-alibaba-examples/nacos-example/nacos-config-example/src/main/resources/bootstrap.properties
+++ b/spring-cloud-alibaba-examples/nacos-example/nacos-config-example/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 spring.application.name=nacos-config-example
+#nacos address
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 
 #nacos certification information
