--- a/spring-cloud-alibaba-examples/spring-cloud-alibaba-dubbo-examples/pom.xml
+++ b/spring-cloud-alibaba-examples/spring-cloud-alibaba-dubbo-examples/pom.xml
@@ -22,7 +22,7 @@
         <module>spring-cloud-dubbo-client-sample</module>
         <module>spring-cloud-dubbo-provider-sample</module>
         <module>spring-cloud-dubbo-consumer-sample</module>
-        <module>spring-cloud-dubbo-provider-web-sample</module>
+<!--        <module>spring-cloud-dubbo-provider-web-sample</module>-->
         <module>spring-cloud-dubbo-servlet-gateway-sample</module>
     </modules>
 
