--- a/spring-cloud-alibaba-starters/spring-cloud-starter-dubbo/pom.xml
+++ b/spring-cloud-alibaba-starters/spring-cloud-starter-dubbo/pom.xml
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
-            <version>3.4.14</version>
+            <version>3.4.13</version>
             <optional>true</optional>
             <exclusions>
                 <exclusion>
@@ -191,6 +191,10 @@
             <artifactId>spring-boot-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-context</artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
